# Prodr

./: CMakeLists.txt  README.md
.cache/clangd/index/: Dialect.h.10DE3CBD9C2BCCAD.idx  Ops.cpp.22D342A504FE7275.idx  prodr-opt.cpp.E2ED784A9A61C57F.idx
include/Prodr/Dialect/: CMakeLists.txt
include/Prodr/Dialect/Prodr/IR/: CMakeLists.txt  Dialect.h  Ops.h  ProdrDialect.td  ProdrOps.td
lib/Prodr/Dialect/Prodr/IR/: CMakeLists.txt  Ops.cpp
